# godot-wasm-bindgen

./: Cargo.toml  README.md
crates/cli/: Cargo.toml
crates/cli/src/: decode.rs  export_subs.rs  main.rs  substitution.rs  util.rs
crates/cli/src/decode/: mod.rs  parser.rs
crates/cli/src/runtime/: mod.rs
crates/cli/src/runtime/imports/: array.rs  mod.rs  other.rs  pool_array.rs  primitive.rs  string.rs  string_array.rs  typeis.rs
crates/macro/: Cargo.toml
crates/macro/src/: lib.rs  parser.rs  util.rs
example/hello-world/: Cargo.toml
example/hello-world/.cargo/: config
example/hello-world/src/: lib.rs
src/: __hidden.rs  godot_array.rs  godot_string.rs  godot_value.rs  lib.rs  prelude.rs  primitive.rs
