[package]
name = "godot-wasm-bindgen-cli"
version = "0.1.0"
edition = "2021"
authors = ["Dheatly23 <71598333+Dheatly23@users.noreply.github.com>"]
license = "Apache-2.0"

[dependencies]
leb128 = "^0.2.0"
walrus = "^0.19.0"
anyhow = "^1.0"
nom = "^7.1"

[dependencies.clap]
version = "^4.0"
features = ["derive", "unicode"]

[dependencies.godot-wasm-bindgen]
path = "../.."
version = "=0.1.0"
